--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "render-proxy-site",
+  "name": "render-wget-mirror",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   },
   "type": "module"
 }
