--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
-{
-  "name": "render-wget-mirror",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "type": "module"
+"dependencies": {
+  "express": "^4.18.2",
+  "puppeteer": "^22.0.0",
+  "fs-extra": "^11.2.0"
 }
