--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "puppeteer": "^22.0.0",
-  "fs-extra": "^11.2.0"
+{
+  "name": "render-puppeteer-singlepage",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "puppeteer": "^22.0.0",
+    "fs-extra": "^11.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "type": "module"
 }
